Fixes the Oracle invalid date bug when date is greater or equal to 2800 By converting the char into unsigned char to avoid the overflow when getting the century from a char for years greater or equal to 2800.

Task-number: QTBUG-8210
Reviewed-by: Michael Goddard